<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <include layout="@layout/toolbar"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Bem Vindo!"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="E-mail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="E-mail"
        android:background="@drawable/left_circle"
        android:textColorHint="@color/black"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:maxLength="20"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        android:text="Senha"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewLogin"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:hint="Senha"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:passwordToggleEnabled="true"
        android:background="@drawable/left_circle"
        android:textColorHint="@color/black"
        android:layout_marginTop="15dp">

        <EditText
            android:id="@+id/editTextSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="15dp"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:maxLength="10"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Lembre-me"
            android:layout_weight="1"
            android:layout_marginStart="50dp"/>

        <Button
            android:id="@+id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/esqueci_a_senha"
            app:layout_constraintTop_toBottomOf="@+id/inputTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            style="@android:style/Widget.Material.Button.Borderless"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:layout_weight="1"

            />
    </LinearLayout>
    
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="Entrar"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_green"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/nao_tem_uma_conta"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/cadastre_se"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logar com:"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/facebook"
            android:layout_marginStart="110dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:src="@drawable/gmail"
            />

    </LinearLayout>
</LinearLayout>