<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <include layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/left_circle_blue">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_computer_36"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/right_circle_white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/situacao_atual_sublinhado"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                android:textColor="@color/dark_blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_situacao"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="Estacionar"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_blue"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/left_circle_blue">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_computer_36"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/right_circle_white"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_seu_saldo"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/dark_blue"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/text_saldo_valor"
                    android:textAlignment="textEnd"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/dark_blue"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

            <Button
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:text="Compre Crédito Aqui"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_blue"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/left_top_circle_blue">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_computer_36"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/right_top_circle_white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_seu_saldo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/dark_blue"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:background="@color/blue_ligth">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_computer_36"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Preços Aplicados"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/dark_blue"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:background="@color/blue_ligth">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_computer_36"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@color/white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Forma de Pagamento"
                android:layout_marginStart="10dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:background="@drawable/left_botton_circle_blue">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_baseline_computer_36"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            android:background="@drawable/right_bottom_circle_white"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Placa Mercosul"
                android:layout_marginStart="10dp"
                android:textColor="@color/dark_blue"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_saldo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>